LookAndFeelSelectionPanel now handles the case when a LookAndFeel can not be instantiated, such as the WindowsLookAndFeel, since it's not exported from its module